# sylled

./: .env.example  Cargo.toml  LICENSE  Makefile.toml  README.md  init.cql
src/: db.rs  graphql.rs  lib.rs  main.rs  router.rs
src/domains/episode/: graphql.rs  model.rs  service.rs
src/util/: config.rs  service.rs
