[package]
name = "sylled"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-graphql = { version = "5", features = ["chrono", "dataloader", "uuid"] }
async-graphql-axum = "5"
axum = "0.6"
async-trait = "0.1"
once_cell = "1"
hyper = "0.14"
hyper-tls = "0.5"
serde = { version = "1", features = ["derive"] }
scylla = { version = "0.8", features = ["cloud"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
envy = "0.4"
serde_json = "1"
